Fix horizontal scroll on card html

--- a/src/styles/layout/_page.scss
+++ b/src/styles/layout/_page.scss
@@ -15,6 +15,6 @@ body {
   background-color: rgba(227, 166, 235, 0.1);
   @media all and (min-width: 768px) {
     flex-direction: row-reverse;
-    min-height: 80vh;
+    min-height: 79vh;
   }
 }
